--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,10 @@
   width: 100%;
   height: 100%;
 }
+
+.gamepass {
+  padding-top: 400px;
+  color: white;
+  background-color: #00000040;
+  padding-bottom: 100px;
+}
